MD User Manager: Larger dimensions for the password-separated reauth dialog.

Gets rid of the unwanted scrollbar in the reauth dialog.

BUG=618629

Review-Url: https://codereview.chromium.org/2064233002
Cr-Commit-Position: refs/heads/master@{#400195}

Former-commit-id: 05aabc6c278421aaa055d4a31aac6e63fc8fd8fd